// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput render 1`] = `
.emotion-0 {
  background-color: #ffffff;
  border: solid 1px #cccccc;
  border-radius: 2px;
  font-family: "Noto Sans",sans-serif;
  font-size: 0.75rem;
  line-height: 1rem;
  padding: calc(0.5rem - 1px) 1rem;
  width: 100%;
  -webkit-transition: all .2s;
  transition: all .2s;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
}

.emotion-0::-webkit-input-placeholder {
  color: #cccccc;
}

.emotion-0::-moz-placeholder {
  color: #cccccc;
}

.emotion-0:-ms-input-placeholder {
  color: #cccccc;
}

.emotion-0::placeholder {
  color: #cccccc;
}

.emotion-0:disabled {
  background-color: #f2f2f7;
}

.emotion-0:not(:disabled):hover {
  border-color: #999999;
}

.emotion-0:not(:disabled):focus {
  outline: none;
  box-shadow: 0 0 0 2px #f2f2f7,0 0 0 4px #056DFF;
}

.emotion-0:not(:disabled):active {
  border-color: #056DFF;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

<input
  class="emotion-0"
  type="text"
/>
`;

exports[`TextInput render password 1`] = `
.emotion-0 {
  background-color: #ffffff;
  border: solid 1px #cccccc;
  border-radius: 2px;
  font-family: "Noto Sans",sans-serif;
  font-size: 0.75rem;
  line-height: 1rem;
  padding: calc(0.5rem - 1px) 1rem;
  width: 100%;
  -webkit-transition: all .2s;
  transition: all .2s;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
}

.emotion-0::-webkit-input-placeholder {
  color: #cccccc;
}

.emotion-0::-moz-placeholder {
  color: #cccccc;
}

.emotion-0:-ms-input-placeholder {
  color: #cccccc;
}

.emotion-0::placeholder {
  color: #cccccc;
}

.emotion-0:disabled {
  background-color: #f2f2f7;
}

.emotion-0:not(:disabled):hover {
  border-color: #999999;
}

.emotion-0:not(:disabled):focus {
  outline: none;
  box-shadow: 0 0 0 2px #f2f2f7,0 0 0 4px #056DFF;
}

.emotion-0:not(:disabled):active {
  border-color: #056DFF;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

<input
  class="emotion-0"
  type="password"
/>
`;
